self_hosted/k8s/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
